Refactor: toList로 수정