@@ -1,7 +1,6 @@
 package com.conkiri.domain.base.dto.response;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.conkiri.domain.base.entity.Arena;
 
@@ -12,7 +11,7 @@ public record ArenaResponseDTO(
 		return new ArenaResponseDTO(
 			arenas.stream()
 				.map(ArenaDetailResponseDTO::from)
-				.collect(Collectors.toList())
+				.toList()
 		);
 	}
 }
